[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tripwire"
version = "0.1.0"
description = "Event-driven supply-chain remediation orchestrator built around the Devin API."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["tripwire*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
